# Changelog
All notable changes to this project will be documented in this file.

The format is loosely based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).

## [0.4.0]
- Add support for user folder lookups in HTTPGitApplication
- Add support for simple segregated user folder ownership and authentication/authorization on repo write
- Add gzip deflate support on http request prior to offloading to HTTPGitApplication
- Add python 3.13 and 3.14 support
- Refactor to move to a full 3rd party HCLI Core app rather than an hcli_core-like hybrid
- Updated the default HAG_HOME to be the ~/.hag
- Update to falcon 4.1.0 and hcli_core 4.0.0
- Update to dulwich 1.0.0
- Removed /repos references
- Remove extra code wrapping HTTPGitApplication
- Remove python 3.8 and 3.9 support
- Remove ported over circleci configuration for now
- Fix manage.py tag and publish

## [0.3.0]
- Add anonymous unauthenticated read operations on git repos
- Add authentication support for write operations on git repo

## [0.2.0]
- Add initial git smart http handling via dulwich
- Add middleware hcli falcon auth and fix 3rd party hcli response
- Add repos location config and HAG_HOME support
- Add logger output and cleanup outstanding printouts
- Remove repos test folder
- Remove outstanding hcli_hai references

## [0.1.0]
- Initial simple implementation of hag.