@@ -1,0 +1,4 @@
+falcon>=4.1.0,<5.0.0
+hcli_core>=4.0.0,<5.0.0
+hcli_problem_details>=0.2.0,<1.0.0
+dulwich==1.0.0
